# bit-torrent

./: CMakeLists.txt  README.md  calc_bencoding_hash.py
include/bencoding/: bencoding.h
include/data/: metainfo.h  torrent_file.h
include/download/: connection.h  downloader.h  event_loop.h  message.h
include/network/: http.h  message.h  network_utils.h  tcp.h
include/parser/: bencoding.h
include/parsing/: bencoding.h  buffer.h  torrent.h
include/tracker/: peer.h  peer_id.h  tracker.h
include/utils/: logger.h
include/workers/: clock.h  writer.h
src/: main.cpp
src/bencoding/: bencoding.cpp
src/network/: http.cpp  network_utils.cpp  tcp.cpp
src/parser/: bencoding.cpp
src/parsing/: bencoding.cpp  buffer.cpp  torrent.cpp
src/tracker/: peer_id.cpp  tracker.cpp
tests/: CMakeLists.txt  test_bencoding.cpp  test_buffer.cpp  test_get_peers.cpp  test_http.cpp  test_parser.cpp  test_sample_bencoding.cpp  test_tcp.cpp  test_torrent.cpp
